fix: update justify-content property in board__addtask for better layout alignment

--- a/styles/boards.css
+++ b/styles/boards.css
@@ -10,7 +10,7 @@
 .board__addtask {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     height: auto;
     margin-bottom: 48px;
 }
